cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp Array/26_Remove_Duplicates.h Array/11_Container_With_Most_Water.h Array/15_3Sum.h Array/88_Merge_Sorted_Array.h Array/16_3Sum_Closet.h Array/75_Sort_Colors.h Array/118_Pascal_Triangle.h Array/18_4Sum.h Array/209_Minimum_Size_Subarray_Sum.h Array/119_Pascal's_Triangle_II.h Array/80_Remove_Duplicates_from_Sorted_Array_II.h Array/31_Next_Permutation.h Array/121_Best_Time_to_Buy_and_Sell_Stock.h Array/122_Best_Time_to_Buy_and_Sell_Stock_II.h Array/54_Spiral_Matrix.h Array/59_Spiral_Matrix_II.h)