cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp Array/283_Move_Zeroes.h Array/228_Summary_Ranges.h Array/48_Rotate_Image.h Array/56_Merge_Intervals.h Array/57_Insert_Interval.h Array/66_plus_one.h Array/414_Third_Maximum_Number.h List/21_Merge-Two_Sorted_Lists.h List/List.h List/203_Remove_Linked_List_Elements.h List/707_Design_Linked_List.h List/206_Reverse_Linked_List.h List/328_Odd_Even_Linked_List.h List/61_rotate_list.h)