cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp Hash/242_Valid_Anagram.h Hash/349_Intersection_Of_Two_Arrays.h Hash/Hash.h Hash/202_Happy_Number.h Hash/1_Two_Sum.h Hash/454_4sum_ii.h Hash/383_Ransom_Note.h Hash/136_Single_Number.h Hash/217_Contains_Duplicate.h Hash/219_Contain_Duplication_ii.h Hash/49_Group_Anagrams.h Hash/205_Isomorphic_Strings.h Hash/290_Word_Pattern.h Interview/1_4_Palindrome.h Interview/1_5_Edit_Once.h Interview/1_7_Rotation_Matrix.h Interview/1_8_Zero_Matrix.h Interview/2_1_Remove_Duplicate_Points.h Interview/2_2_Kth_Node_From_End_Of_List.h Interview/2_6_Palindrome_Linked_List.h Interview/1_1_Is_Unique.h Interview/2_4_Partition_List.h Interview/2_5_Sum_Lists.h Backtracking/8_7_Permutation.h Sort/147_Insertion_Sort_List.h Hash/350_Intersection_Of_Two_Arrays_ii.h Sort/148_Sort_List.h)